user has ability to add markers on map

--- a/blank-slate.html
+++ b/blank-slate.html
@@ -10,6 +10,7 @@
         </style>
     </head>
     <body>
+        <h1>SOMETHING</h1>
         <div id="my-map"></div>
         Search for a restaurant
         <input type="text" id="food">
@@ -24,6 +25,7 @@
 
         function handleFoodEntry(evt){
             var whatTheyTyped = $('#food').val();
+            debugger;
             // 2 alternative ways to get what the user typed:
             // document.getElementById("#food").value
             // evt.currentTarget.value
